--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,3 +12,31 @@
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
+
+Books:
+<br/>
+<%if @user.books.empty? %>
+"no book"
+<%else%>
+ <% @user.books.each do |book| %>
+ 	<div style="border:solid black 1px">
+		<p> <%= book.title + " by " + book.author %> </p>
+		<p><%= link_to "Edit Book", edit_user_books_path(book) %> |
+		<%= link_to "Delete Book", user_books_path(@user, book), method: :delete, confirm: "Are you sure you want to delete this book" %></p>
+ 	</div>
+ <% end %>
+
+<%end%>
+<hr/>
+
+ <%= form_for @book, url: user_books_path(@user) do |f| %>
+   <%= f.label :title %>
+   <%= f.text_field :title %>
+   <br/>
+   <%= f.label :author %>
+   <%= f.text_field :author %>
+  <%= f.submit %>
+<% end %>
+
+<%= link_to 'Edit', edit_user_path(@user) %> |
+<%= link_to 'Back', users_path %>
